优化中文字体

--- a/template/template.tex
+++ b/template/template.tex
@@ -25,7 +25,7 @@ $endif$
 \else % if luatex or xelatex
   \usepackage{fontspec}   % 允許設定字體
   \usepackage{xeCJK}    % 分開設置中英文字型
-  \setCJKmainfont{STSong}   % 設定中文字型
+  \setCJKmainfont{Sarasa Gothic SC}   % 設定中文字型
   \setmainfont[Mapping=tex-text]{Times New Roman}%\rmfamily 使用的字体,默认英文和数字的字体。   % 設定英文字型
   \setromanfont{Georgia}  % 字型
   \setmonofont{Courier New}
